-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.0 Beta3
-
None
From Qt6 accepting touch events in Quick needs explicitly set with QQuickItem::acceptTouchEvents(true).
Noted here: https://doc-snapshots.qt.io/qt6-dev/qquickitem.html#setAcceptedMouseButtons
(Qt5 does not need it - the setAcceptedMouseButtons enabled touch events too.)
For feature parity, I suppose it should be set to true.
Reproduction: open any webenginewidgets example and try to move the page - it is working as intended.
If you open any webengine example, the touch event is handled as a mouse event - a swipe will select text - it behaves like a mouse movement with a pressed left button.
| For Gerrit Dashboard: QTBUG-95924 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 365952,4 | Enable touch events in webenginequick by default | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 366007,3 | Fix rendering and crash with popups | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 366310,2 | Fix rendering and crash with popups | 6.2 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 367215,2 | Enable touch events in webenginequick by default | 6.2 | qt/qtwebengine | Status: MERGED | +2 | 0 |