Enable touch events in webenginequick by default

Task-number: QTBUG-95924
Pick-to: 6.2
Change-Id: If6905e8c98c0468c74bb96f9a22267cb9ce4ed16
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>