src/webenginequick/render_widget_host_view_qt_delegate_quick.cpp
@@ -59,6 +59,7 @@ RenderWidgetHostViewQtDelegateQuick::RenderWidgetHostViewQtDelegateQuick(RenderW
     setFlag(ItemHasContents);
     setAcceptedMouseButtons(Qt::AllButtons);
     setAcceptHoverEvents(true);
+    setAcceptTouchEvents(true);
     if (!isPopup) {
         setFocus(true);
         setActiveFocusOnTab(true);
